--- a/basics/templates/basics/information_view.html
+++ b/basics/templates/basics/information_view.html
@@ -8,11 +8,11 @@
             <div class="row">
                 <div class="col-sm-9">
                     <h2>{{information.headline}}</h2>
-                    <h6>from: {{ information.date }} </h6>
+                    <h6>from: {{ information.date }} {% if information.group %} / by: <a id="green-link" href="{% url 'basics:group_detail_for_user' name=information.group.name %}">{{ information.group.name }}</a>{% endif %}</h6>
                 </div>
                 <div class="col-sm-3">
                     <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups" style="float: right">
-                            <a id="standard-grey-button-light" class="btn btn-default btn-sml" type="button" href="{% url 'basics:information_all' %}" style="margin-top: 15px; margin-bottom: 15px;"><span class="glyphicon glyphicon-chevron-left"></span> Back</a>
+                            <a id="standard-grey-button-light" class="btn btn-default btn-sml" type="button" onClick="history.go(-1);return true;"  style="margin-top: 15px; margin-bottom: 15px;"><span class="glyphicon glyphicon-chevron-left"></span> Back</a>
                     </div>
                 </div>
             </div>
@@ -68,7 +68,7 @@
         </div>
 
         <div class="modal-footer">
-            <a id="standard-grey-button-light" class="btn btn-default btn-sml" type="button" href="{% url 'basics:information_all' %}" style="float: right; margin: 15px;"><span class="glyphicon glyphicon-chevron-left"></span> Back</a>
+            <a id="standard-grey-button-light" class="btn btn-default btn-sml" type="button" onClick="history.go(-1);return true;" style="float: right; margin: 15px;"><span class="glyphicon glyphicon-chevron-left"></span> Back</a>
         </div>
     </div>
 </div>
