--- a/basics/templates/basics/information_new.html
+++ b/basics/templates/basics/information_new.html
@@ -12,7 +12,7 @@
 					{%csrf_token%}
 					<p style="font-size:160%;"> description <p\>
 						<div class="form-group">
-							<input type="description" class="form-control input-lg" placeholder="headline" name="headline"  rows="4"></textarea>
+							<input type="description" class="form-control input-lg" placeholder="headline" name="headline"  rows="4" maxlength="30">
 						</div>
 					<div class="form-group">
 						<textarea type="description" class="form-control input-lg" placeholder="description" name="text"  rows="4"></textarea>
