--- a/basics/templates/basics/needs_new.html
+++ b/basics/templates/basics/needs_new.html
@@ -18,7 +18,7 @@
 					</select>
 					<p style="font-size:160%;"> description </p>
 						<div class="form-group">
-							<input type="description" class="form-control input-lg" placeholder="headline" name="{{need.headline.name}}"  rows="4"></textarea>
+							<input type="description" class="form-control input-lg" placeholder="headline" name="{{need.headline.name}}"  rows="4" maxlength="30"></textarea>
 						</div>
 					<div class="form-group">
 						<textarea type="description" class="form-control input-lg" placeholder="description" name="{{need.text.name}}"  rows="4"></textarea>
