--- a/basics/templates/basics/group_edit.html
+++ b/basics/templates/basics/group_edit.html
@@ -12,31 +12,39 @@
 				    {% csrf_token %}
     				
 					<div class="form-group">
+						<p style="font-size:130%;"> E-Mail </p>
 						{% if group.email == "" %}
-							<input type="email" class="form-control input-lg" placeholder=email name="email">
+							<input type="email" class="form-control input-lg" placeholder=email name="email" maxlength="254">
 						{% else %}
-							<input type="email" class="form-control input-lg" placeholder= '{{ group.email }}' name="email">
+							<input type="email" class="form-control input-lg" value= '{{ group.email }}' name="email" maxlength="254">
 						{% endif %}
 					</div>
 
 					<div class="form-group">
+						<p style="font-size:130%;"> Phone </p>
 						{% if group.phone == "" %}
-							<input type="description" class="form-control input-lg" placeholder=phonenumber name="phone"  >
+							<input type="description" class="form-control input-lg" placeholder=phonenumber name="phone" maxlength="15" >
 						{% else %}
-							<input type="description" class="form-control input-lg" placeholder= {{ group.phone }} name="phone"  >
+							<input type="description" class="form-control input-lg" value= {{ group.phone }} name="phone" maxlength="15" >
 						{% endif %}
 					</div>
 
 					<div class="form-group">
+						<p style="font-size:130%;"> Webpage </p>
 						{% if group.webpage == "" %}
-							<input type="description" class="form-control input-lg" placeholder=webpage name="page"  >
+							<input type="description" class="form-control input-lg" placeholder=webpage name="page" maxlength="256" >
 						{% else %}
-							<input type="description" class="form-control input-lg" placeholder= {{ group.webpage }} name="page"  >
+							<input type="description" class="form-control input-lg" value= {{ group.webpage }} name="page" maxlength="256" >
 						{% endif %}
 					</div>
 
 					<div class="form-group">
+						<p style="font-size:130%;"> Group Description </p>
+						{% if group.description == "" %}
 							<textarea type="description" class="form-control input-lg" placeholder="description" name="description"  rows="4"></textarea>
+						{% else %}
+							<textarea type="description" class="form-control input-lg" name="description"  rows="4">{{ group.description }}</textarea>
+						{% endif %}
 
 					</div>
 
