--- a/basics/templates/basics/profil_edit.html
+++ b/basics/templates/basics/profil_edit.html
@@ -10,30 +10,33 @@
 			<div class="modal-body">
 				<form class="form" role="form" method="post" accept-charset="UTF-8">
 				    {% csrf_token %}
-    					<div class="form-group">
-					<input type="description" class="form-control input-lg" placeholder= {{ userdata.pseudonym }} name="pseudo"  >
-						</div>
-
-					<div class="form-group">
-					<input type="description" class="form-control input-lg" placeholder= {{ user.email }} name="email"  >
-						</div>
-
-					<div class="form-group">
-					{% if userdata.phone == "" %}
-					<input type="description" class="form-control input-lg" placeholder= phonenumber name="phone"  >
-
-					{% else %}
-					<input type="description" class="form-control input-lg" placeholder= {{ userdata.phone }} name="phone"  >
-					{% endif %}
+    				<div class="form-group">
+    					<p style="font-size:130%;"> Pseudonym </p>
+						<input type="description" class="form-control input-lg" value= {{ userdata.pseudonym }} name="pseudo" maxlength="15" >
 					</div>
 
 					<div class="form-group">
-					<input type="description" class="form-control input-lg" placeholder= {{ userdata.aux }} name="aux"  >
+						<p style="font-size:130%;"> E-Mail </p>
+						<input type="description" class="form-control input-lg" value= {{ user.email }} name="email"  >
 					</div>
 
 					<div class="form-group">
-						</div>
-						{% include "basics/map_testing.html" %}
+						<p style="font-size:130%;"> Phone </p>
+						{% if userdata.phone == "" %}
+							<input type="description" class="form-control input-lg" placeholder= phonenumber name="phone" maxlength="13" >
+						{% else %}
+							<input type="description" class="form-control input-lg" value= {{ userdata.phone }} name="phone"  >
+						{% endif %}
+					</div>
+
+					<div class="form-group">
+						<p style="font-size:130%;"> Range in km </p>
+						<input type="description" class="form-control input-lg" value= {{ userdata.aux }} name="aux"  >
+					</div>
+
+					<div class="form-group">
+					</div>
+					{% include "basics/map_testing.html" %}
 
 					<p><input type = "checkbox" name="information" {% if userdata.get_notifications %} checked {% endif %} onclick=$("#categories").fadeToggle();>
 						<label class="w3-validate"> Inform me via email </label></p>
