added maxlength to textfields

--- a/basics/templates/basics/immediate_aid.html
+++ b/basics/templates/basics/immediate_aid.html
@@ -20,7 +20,7 @@
           <input type="Email" class="form-control input-lg" placeholder="email" name="email"  rows="4" value="{{form.email.value}}"></textarea>
         </div>
         <div class="form-group">
-          <input type="description" class="form-control input-lg" placeholder="headline" name="headline"  rows="4" value="{{need_form.headline.value}}"></textarea>
+          <input type="description" class="form-control input-lg" placeholder="headline" name="headline"  rows="4" value="{{need_form.headline.value}}" maxlength="30"></textarea>
         </div>
         <div class="form-group">
           <textarea type="description" class="form-control input-lg" placeholder="description" name="text"  rows="4" value="{{need_form.text.value}}">{{need_form.text.value}}</textarea>
