--- a/basics/templates/basics/contact_us.html
+++ b/basics/templates/basics/contact_us.html
@@ -11,7 +11,7 @@
 				<form class="form" role="form" method="post" accept-charset="UTF-8">
 					{%csrf_token%}
 						<div class="form-group">
-		  					<input type="email" class="form-control input-lg" placeholder="Email" name="email" required/>
+		  					<input type="email" class="form-control input-lg" placeholder="Email" name="email" maxlength="254" required/>
 		  				</div>
 						<div class="form-group">
 							<input type="description" class="form-control input-lg" placeholder="headline" name="headline" maxlength="30" rows="4"></textarea>
