radius range in map-profile

--- a/basics/templates/basics/profil.html
+++ b/basics/templates/basics/profil.html
@@ -190,8 +190,6 @@
     	map = new google.maps.Map(document.getElementById("map-container"),mapProp);
 
         placeMarker(new google.maps.LatLng(parseFloat("{{ Userdata.address.latitude }}".replace(",", ".")), parseFloat("{{ Userdata.address.longditude }}".replace(",", "."))));
-
-
         var circle = new google.maps.Circle({
             strokeColor: '#FF0000',
             strokeOpacity: 0.8,
@@ -199,8 +197,8 @@
             fillColor: '#FF0000',
             fillOpacity: 0.35,
             map: map,
-            center: new google.maps.LatLng(parseFloat("{{ Userdata.address.latitude }}".replace(",", ".")), parseFloat("{{ Userdata.address.longditude }}".replace(",", "."))),
-            radius: Math.sqrt({{Userdata.aux}} * 1000) * 100
+            center: marker.getPosition(),
+            radius: parseFloat('{{Userdata.aux}}')*1000,
     });
 
 
